# podstawy_cpp_l2

./: CMakeLists.txt  README.md  if.cpp  link.txt  petle.cpp  template.cpp
