cmake_minimum_required(VERSION 4.1)
project(podstawy_cpp_l2)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(podstawy_cpp_l2
        .idea/.gitignore
        .idea/editor.xml
        .idea/modules.xml
        .idea/podstawy_cpp_l2.iml
        .idea/vcs.xml
        .idea/workspace.xml
        README.md
        template.cpp
        if.cpp
        petle.cpp)
